--- a/src/update3/org/cict/layout/sectionmain/win-section-wizard.fxml
+++ b/src/update3/org/cict/layout/sectionmain/win-section-wizard.fxml
@@ -75,7 +75,7 @@
             <Insets left="10.0" />
          </padding>
       </HBox>
-      <StackPane alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefWidth="1050.0" VBox.vgrow="ALWAYS">
+      <StackPane alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
          <VBox.margin>
             <Insets top="30.0" />
          </VBox.margin>
