--- a/src/update3/org/cict/layout/sectionmain/win-section-view.fxml
+++ b/src/update3/org/cict/layout/sectionmain/win-section-view.fxml
@@ -270,7 +270,7 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox fx:id="vbox_view_schedule" maxHeight="1.7976931348623157E308" spacing="40.0">
+                  <VBox fx:id="vbox_view_schedule" maxHeight="1.7976931348623157E308" spacing="40.0" visible="false">
                      <children>
                         <VBox prefWidth="663.0" spacing="20.0" VBox.vgrow="ALWAYS">
                            <padding>
@@ -426,7 +426,7 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox fx:id="vbox_add_schedule" maxHeight="1.7976931348623157E308" spacing="40.0" visible="false">
+                  <VBox fx:id="vbox_add_schedule" maxHeight="1.7976931348623157E308" spacing="40.0">
                      <children>
                         <VBox prefWidth="663.0" spacing="20.0" VBox.vgrow="ALWAYS">
                            <padding>
@@ -484,7 +484,7 @@
                                                 <Insets left="10.0" />
                                              </padding>
                                           </Label>
-                                          <ComboBox prefWidth="253.0" styleClass="metro-combo-box" />
+                                          <ComboBox fx:id="cmb_sched_day" prefWidth="253.0" styleClass="metro-combo-box" />
                                        </children>
                                     </HBox>
                                     <HBox>
@@ -497,7 +497,7 @@
                                                 <Insets left="10.0" />
                                              </padding>
                                           </Label>
-                                          <ComboBox prefWidth="253.0" styleClass="metro-combo-box" />
+                                          <ComboBox fx:id="cmb_sched_start" prefWidth="253.0" styleClass="metro-combo-box" />
                                        </children>
                                     </HBox>
                                     <HBox>
@@ -510,7 +510,7 @@
                                                 <Insets left="10.0" />
                                              </padding>
                                           </Label>
-                                          <ComboBox prefWidth="253.0" styleClass="metro-combo-box" />
+                                          <ComboBox fx:id="cmb_sched_end" prefWidth="253.0" styleClass="metro-combo-box" />
                                        </children>
                                     </HBox>
                                     <HBox>
@@ -523,7 +523,7 @@
                                                 <Insets left="10.0" />
                                              </padding>
                                           </Label>
-                                          <TextField fx:id="txt_adviser1" prefHeight="25.0" prefWidth="253.0" promptText="Room Name" styleClass="metro-textbox-18">
+                                          <TextField fx:id="txt_sched_room" prefHeight="25.0" prefWidth="253.0" promptText="Room Name" styleClass="metro-textbox-18">
                                              <font>
                                                 <Font />
                                              </font>
