--- a/src/update3/org/cict/scheduling/TimeTableController.fxml
+++ b/src/update3/org/cict/scheduling/TimeTableController.fxml
@@ -7,7 +7,7 @@
 
 <StackPane fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@timetable.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" style="-fx-background-color: blue;">
+      <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
          <children>
             <VBox prefHeight="100.0" prefWidth="580.0" style="-fx-background-color: #FFFFFF;" />
             <HBox fx:id="hbox_table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white;" VBox.vgrow="ALWAYS" />
