--- a/src/update3/org/cict/scheduling/TimeTableController.fxml
+++ b/src/update3/org/cict/scheduling/TimeTableController.fxml
@@ -10,7 +10,12 @@
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
          <children>
             <VBox prefHeight="100.0" prefWidth="580.0" style="-fx-background-color: #FFFFFF;" />
-            <HBox fx:id="hbox_table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white;" VBox.vgrow="ALWAYS" />
+            <StackPane VBox.vgrow="ALWAYS">
+               <children>
+                  <HBox fx:id="hbox_table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white;" />
+                  <HBox fx:id="hbox_over" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: transparent;" />
+               </children>
+            </StackPane>
          </children>
          <StackPane.margin>
             <Insets />
