--- a/src/update3/org/cict/scheduling/TableCell.fxml
+++ b/src/update3/org/cict/scheduling/TableCell.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 
-
 <HBox alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label accessibleText="lbl_content" text="Monday" />
+      <Label accessibleText="lbl_content" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Monday" wrapText="true" HBox.hgrow="ALWAYS">
+         <padding>
+            <Insets left="10.0" right="10.0" />
+         </padding></Label>
    </children>
 </HBox>
