--- a/src/update3/org/cict/scheduling/TableCell.fxml
+++ b/src/update3/org/cict/scheduling/TableCell.fxml
@@ -6,9 +6,12 @@
 
 <HBox alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label accessibleText="lbl_content" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Monday" wrapText="true" HBox.hgrow="ALWAYS">
+      <Label accessibleText="lbl_content" alignment="CENTER" text="Monday" wrapText="true" HBox.hgrow="ALWAYS">
          <padding>
             <Insets left="10.0" right="10.0" />
-         </padding></Label>
+         </padding>
+         <HBox.margin>
+            <Insets />
+         </HBox.margin></Label>
    </children>
 </HBox>
